# vibelympics

./: .gitignore  Dockerfile  README.md  agents.md  architecture_notes.md  pyproject.toml  todo.md  vibanalyz_mvp_prompt.md
.cursor/plans/: replace_pdf_generation_with_odt_template_system_9b64247e.plan.md
round_1/: .gitignore  Dockerfile  README.md
round_2/: .gitignore  Dockerfile  README.md  agents.md  architecture_notes.md  pipeline_notes.md  status_and_log_display.md  vibanalyz_mvp_prompt.md
round_2/src/vibanalyz/: cli.py
round_2/src/vibanalyz/adapters/: npm_client.py  pypi_client.py  syft_client.py
round_2/src/vibanalyz/analyzers/: __init__.py
round_2/src/vibanalyz/app/: __init__.py  state.py
round_2/src/vibanalyz/data/: __init__.py
round_2/src/vibanalyz/domain/: __init__.py  exceptions.py  models.py  scoring.py
round_2/src/vibanalyz/services/: __init__.py  formatting.py  pdf_report.py
src/vibanalyz/: __init__.py
src/vibanalyz/adapters/: grype_client.py  npm_client.py  pypi_client.py  rust_client.py  syft_client.py
src/vibanalyz/analyzers/: metadata.py
src/vibanalyz/app/: main.py
src/vibanalyz/app/actions/: audit_action.py  copy_log_action.py  init_action.py  select_repo_action.py  start_over_action.py
src/vibanalyz/app/components/: __init__.py  input_section.py  log_display.py  progress_tracker.py  status_bar.py
src/vibanalyz/data/: vibanalyz_audit_template.odt  vibanalyz_audit_template.xhtml
src/vibanalyz/domain/: models.py  protocols.py  scoring.py
src/vibanalyz/services/: artifacts.py  pdf_report.py  pipeline.py  reporting.py
(+22 files in other folders)
