[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibanalyz"
version = "0.1.0"
description = "Package security auditing tool - MVP stub"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40.0",
    "requests>=2.31.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
]

[project.scripts]
vibanalyz = "vibanalyz.cli:main"

[tool.hatchling.build]
source-dir = "src"

[tool.hatch.build]
include = ["src/vibanalyz/data/*.xhtml"]

